Fix versioning of charts

--- a/scripts/cbs_news_price_tracker.Rmd
+++ b/scripts/cbs_news_price_tracker.Rmd
@@ -16,22 +16,22 @@ library(htmltools)
 <br>
 <br>
 <!-- <subhead>line charts for household items costs</subhead> -->
-<div style="min-height:1546px"><script type="text/javascript" defer src="https://datawrapper.dwcdn.net/aVy9W/embed.js?v=7" charset="utf-8"></script><noscript><img src="https://datawrapper.dwcdn.net/aVy9W/full.png" alt="" /></noscript></div>
+<div style="min-height:1546px"><script type="text/javascript" defer src="https://datawrapper.dwcdn.net/aVy9W/embed.js" charset="utf-8"></script><noscript><img src="https://datawrapper.dwcdn.net/aVy9W/full.png" alt="" /></noscript></div>
 <br>
 <br>
 <br>
 <!-- <subhead> lookup of items </subhead> -->
-<div style="min-height:858px"><script type="text/javascript" defer src="https://datawrapper.dwcdn.net/YK0KE/embed.js?v=6" charset="utf-8"></script><noscript><img src="https://datawrapper.dwcdn.net/YK0KE/full.png" alt="" /></noscript></div>
+<div style="min-height:858px"><script type="text/javascript" defer src="https://datawrapper.dwcdn.net/YK0KE/embed.js" charset="utf-8"></script><noscript><img src="https://datawrapper.dwcdn.net/YK0KE/full.png" alt="" /></noscript></div>
 <br>
 <br>
 <br>
 <!-- <subhead> rent prices </subhead> -->
-<div style="min-height:3848px"><script type="text/javascript" defer src="https://datawrapper.dwcdn.net/WAp6H/embed.js?v=3" charset="utf-8"></script><noscript><img src="https://datawrapper.dwcdn.net/WAp6H/full.png" alt="" /></noscript></div>
+<div style="min-height:3848px"><script type="text/javascript" defer src="https://datawrapper.dwcdn.net/WAp6H/embed.js" charset="utf-8"></script><noscript><img src="https://datawrapper.dwcdn.net/WAp6H/full.png" alt="" /></noscript></div>
 <br>
 <br>
 <br>
 <!-- <subhead> home prices </subhead> -->
-<div style="min-height:3848px"><script type="text/javascript" defer src="https://datawrapper.dwcdn.net/RPaJt/embed.js?v=6" charset="utf-8"></script><noscript><img src="https://datawrapper.dwcdn.net/RPaJt/full.png" alt="" /></noscript></div>
+<div style="min-height:3848px"><script type="text/javascript" defer src="https://datawrapper.dwcdn.net/RPaJt/embed.js" charset="utf-8"></script><noscript><img src="https://datawrapper.dwcdn.net/RPaJt/full.png" alt="" /></noscript></div>
 <br>
 <br>
 <br>
